Added final files

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,63 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <!-- Your CardStackView -->
     <com.yuyakaido.android.cardstackview.CardStackView
         android:id="@+id/card_stack_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/swipeButton" />
+        android:layout_above="@+id/radSlider" />
 
     <!-- Your Button -->
-    <Button
-        android:id="@+id/swipeButton"
-        android:layout_width="wrap_content"
+<!--    <Button-->
+<!--        android:id="@+id/swipeButton"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Swipe Right"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_marginBottom="90dp"/>-->
+
+    <com.google.android.material.slider.Slider
+        android:id="@+id/radSlider"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="Swipe Right"
+        android:valueFrom="1"
+        android:valueTo="50"
+        app:haloColor="@color/reddish"
+        app:thumbColor="@color/reddish"
+        app:thumbStrokeColor="@color/reddish"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginBottom="90dp"/>
+
+        />
+
+    <Button
+        android:id="@+id/radBut"
+        android:layout_toEndOf="@+id/radSlider"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="90dp"
+        android:layout_width="100dp"
+        android:text="Change"
+        android:backgroundTint="@color/reddish"
+        android:layout_height="wrap_content" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/bottomNavigationView"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/bottom_background"
+        android:layout_marginBottom="10dp"
+        android:elevation="2dp"
+        app:menu="@menu/bottom_menu"
+        app:itemIconSize="30dp"
+        app:itemIconTint="@drawable/item_selector"
+        app:itemRippleColor="@android:color/transparent"
+        />
+
 </RelativeLayout>
