--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="lavender">#8692f7</color>
+    <color name="grey">#d2d2d2</color>
+    <color name="blueish">#FF7AC4D1</color>
+    <color name="reddish">#d69299</color>
 </resources>
